css: Fix text contrast in input

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,6 +40,9 @@
       h3 {
         @apply text-lg font-semibold;
       }
+      input {
+        @apply text-gray-900;
+      }
     }
   }
 }
